[package]
name = "erudify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anes = "0.2.0"
anyhow = "1.0.86"
bytes = "1.6.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
crossterm = "0.27.0"
getrandom = { version = "0.2.11", features = ["js"] }
gloo = "0.11.0"
haoxue-dict = "0.1.6"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
itertools = "0.12.0"
lipsum = "0.9.0"
log = "0.4.20"
once_cell = "1.19.0"
openai_dive = "0.4.9"
ordered-float = "4.2.0"
prettify_pinyin = "2.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
ratatui = "0.26.2"
rodio = "0.18.1"
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
tui-input = "0.8.0"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
